# chat-app

./: .gitignore  CMakeLists.txt
HeadFile/: AddFriend.h  AddFriendReq.h  ChangeUserName.h  ChangeUserNameReq.h  Common.h  DBConnGuard.h  FriendApplication.h  FriendList.h  HeartBeat.h  Login.h  LoginReq.h  Logout.h  LogoutReq.h  Message.h  MysqlConn.h  MysqlConnGuard.h  MysqlConnPool.h  RedisConn.h  RedisConnPool.h  Register.h  RegisterReq.h  Req.h  Request.h  Response.h  SendMsgReq.h  UniqueHashGenerator.h  UserFunction.h  nocopyable.h
LibSrc/: AddFriend.cpp  AddFriendReq.cpp  CMakeLists.txt  ChangeUserName.cpp  Common.cpp  FriendApplication.cpp  FriendList.cpp  HeartBeat.cpp  Login.cpp  LoginReq.cpp  Logout.cpp  LogoutReq.cpp  Message.cpp  MysqlConn.cpp  MysqlConnPool.cpp  RedisConn.cpp  Register.cpp  RegisterReq.cpp  Request.cpp  Response.cpp  SendMsgReq.cpp  UniqueHashGenerator.cpp  UserFunction.cpp
LibSrc/base/: AddFriend.cpp  AddFriendReq.cpp  ChangeUserNameReq.cpp  Common.cpp  FriendApplication.cpp  FriendList.cpp  LogoutReq.cpp  Message.cpp  RegisterReq.cpp  Request.cpp
LibSrc/db/: MysqlConn.cpp  RedisConn.cpp  RedisConnPool.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  mainclient.cpp
server/: CMakeLists.txt  Server.cpp  Server.h  config.yaml  mainserver.cpp
